[fix] pub sticky header overlap of support panel
remove comment stats from sticky header

(cherry picked from commit 65bc8a0dcd4230770cd07d8e3c3f52e5a509712a)

--- a/html/com_publications/publications.scss
+++ b/html/com_publications/publications.scss
@@ -24,7 +24,7 @@
   position: sticky;
   top: 3.5rem;
   transition: .2s;
-  z-index: 1000;
+  z-index: 20;
   .back {
     grid-column: 1 / span 1;
     font-size: .9em;
@@ -86,8 +86,7 @@
     font-size: 1.7rem;
   }
 
-  .orgs,
-  .usage {
+  .stats {
     display: none;
   }
 
@@ -388,10 +387,6 @@ ol.tags {
       &.admin {
         display: none;
       }
-  }
-
-  .top-level > .tag {
-      padding: 4px 10px;
   }
 
   /* Main list */
